k8s/user-apps/bene-timetracker/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: time-tracker
  labels: &labels
    app.kubernetes.io/name: bene-timetracker
    app.kubernetes.io/component: http-server
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
