k8s/user-apps/bene-timetracker/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bene-timetracker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
spec:
  tls:
    - secretName: tls-time.ftsell.de
      hosts:
        - time.ftsell.de
  rules:
    - host: time.ftsell.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: time-tracker
                port:
                  name: http
